docs: Traduzindo a documentação para inglês e criando doc. da rota de exclusão de Order Status
